# SyntheticGenAgent

./: README.md  main.py  pyproject.toml  requirements.txt  settings.py
models/: models.py
prompts/: cel.yaml  data_scientist.yaml  generate_text.yaml  ideas_creator.yaml  manager.yaml  map_reduce.yaml
tools/: AnalyzeMetrics.py  GenerateText.py  IdeasCreator.py
utils/: map_reduce.py  utils.py
