[project]
name = "syntheticgenagent"
version = "0.1.0"
description = "Generate syntetic data with LLMs"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.72.4",
    "numpy>=2.3.0",
    "ollama>=0.5.1",
    "pl-core-news-sm",
    "pyaml>=25.5.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "smolagents[toolkit]>=1.17.0",
    "spacy>=3.8.7",
]

[tool.uv.sources]
pl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0-py3-none-any.whl" }
